[gd_scene load_steps=4 format=3 uid="uid://cs2uiru7reudd"]

[ext_resource type="Script" path="res://scripts/paint_control.gd" id="1"]
[ext_resource type="Script" path="res://scripts/tools_panel.gd" id="2"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(1, 1, 1, 1)

[node name="PaintRoot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DrawingAreaBG" type="Panel" parent="."]
layout_mode = 0
offset_left = 350.0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("1")

[node name="PaintControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1")

[node name="TLPos" type="Marker2D" parent="PaintControl"]
position = Vector2(350, 0)

[node name="ToolsPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 350.0
offset_bottom = 720.0
script = ExtResource("2")

[node name="LabelBrushColor" type="Label" parent="ToolsPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 120.0
offset_right = 330.0
offset_bottom = 134.0
text = "Color"
horizontal_alignment = 1

[node name="ColorPickerBrush" type="ColorPickerButton" parent="ToolsPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 140.0
offset_right = 332.0
offset_bottom = 239.0

[node name="ButtonUndo" type="Button" parent="ToolsPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 317.0
offset_right = 340.0
offset_bottom = 357.0
text = "Undo"

[node name="ButtonClear" type="Button" parent="ToolsPanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 474.0
offset_right = 337.0
offset_bottom = 514.0
text = "Clear "

[node name="CastSpell" type="Button" parent="ToolsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.577
anchor_right = 0.5
anchor_bottom = 0.577
offset_left = -167.0
offset_top = -15.44
offset_right = 166.0
offset_bottom = 15.56
grow_horizontal = 2
grow_vertical = 2
text = "Draw"

[node name="SaveFileDialog" type="FileDialog" parent="."]
size = Vector2i(454, 159)
access = 2
filters = PackedStringArray("*.png")

[connection signal="pressed" from="ToolsPanel/CastSpell" to="PaintControl" method="_on_cast_spell_pressed"]
